# vk-bindless

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/meshes/: .gitignore
assets/shaders/: bloom.shader  brdf_lut_compute.shader  cube.shader  grid.shader  gui.shader  indirect_mesh.shader  indirect_mesh_old.shader  lighting_gbuffer.shader  line_canvas.shader  opaque_geometry.shader  post.shader  prepass.shader  simple.shader
assets/shaders/include/: math_constants.glsl  math_helpers.glsl  packing.glsl  pbr_utils.glsl  ubo.glsl
client/: CMakeLists.txt  helper.cpp  helper.hpp  main.cpp
include/vk-bindless/: allocator_interface.hpp  buffer.hpp  camera.hpp  command_buffer.hpp  commands.hpp  common.hpp  container.hpp  context_destroy.hpp  debug_name.hpp  event_system.hpp  expected.hpp  file_watcher.hpp  forward.hpp  graphics_context.hpp  handle.hpp  holder.hpp  imgui_renderer.hpp  line_canvas.hpp  material.hpp  mesh.hpp  object_pool.hpp  pipeline.hpp  scope_exit.hpp  shader.hpp  shader_compilation.hpp  swapchain.hpp  texture.hpp  transitions.hpp  types.hpp  vulkan_context.hpp
scripts/: format.py
src/: buffer.cpp  camera.cpp  command_buffer.cpp  commands.cpp  event_system.cpp  graphics_context.cpp  imgui_renderer.cpp  line_canvas.cpp  mesh.cpp  pipeline.cpp  shader.cpp  shader_compilation.cpp  shader_compilation_impl.inl  swapchain.cpp  texture.cpp  tool_compiler.cpp  types.cpp  vma_allocator_impl.cpp  vulkan_context.cpp
test/: container_tests.cpp  integration_tests.cpp  main.cpp  shader_compilation_tests.cpp
