project(vk_bindless_client CXX)
add_executable(vk_bindless_client main.cpp)
target_link_libraries(vk_bindless_client VkBindless::VkBindless glfw)

if (MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
    if (ENABLE_TESTING)
        target_compile_options(test_vk_bindless PRIVATE /W4 /WX)
    endif()    
    get_target_property(VMA_REAL_TARGET GPUOpen::VulkanMemoryAllocator ALIASED_TARGET)

    if (VMA_REAL_TARGET)
        target_compile_options(${VMA_REAL_TARGET} INTERFACE /wd4100 /wd4324)
    endif()
elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
    if (ENABLE_TESTING)
        target_compile_options(test_vk_bindless PRIVATE -Wall -Wextra -Wpedantic -Werror)
    endif()
endif()